--- a/instrument-experimental/index.css
+++ b/instrument-experimental/index.css
@@ -1,3 +1,7 @@
+/* 
+None of this is in use anymore, but it's a good example to keep for now. 
+*/
+
 /* https://www.w3schools.com/howto/howto_css_dropdown.asp */
 /* Dropdown Button */
 .dropbtn {
