--- a/instrument-experimental/index.css
+++ b/instrument-experimental/index.css
@@ -12,6 +12,24 @@ None of this is in use anymore, but it's a good example to keep for now.
   border: none;
 }
 
+.play-pause {
+  accent-color: rgb(153, 255, 0);
+  font-size: 30px;
+  width: 40px;
+  height: 40px;
+}
+
+.button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
