--- a/instrument-experimental/index.css
+++ b/instrument-experimental/index.css
@@ -1,18 +1,20 @@
-/* 
-None of this is in use anymore, but it's a good example to keep for now. 
-*/
-
-/* https://www.w3schools.com/howto/howto_css_dropdown.asp */
-/* Dropdown Button */
-.dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 12px;
-  border: none;
+html {
+  background-color: rgb(139, 204, 240);
 }
 
+.title {
+  margin: auto;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.label {
+  font-size: large;
+  font-family: sans-serif;
+  text-align: center;
+}
 .play-pause {
+  margin: auto;
   accent-color: rgb(153, 255, 0);
   font-size: 30px;
   width: 40px;
@@ -20,45 +22,18 @@ None of this is in use anymore, but it's a good example to keep for now.
 }
 
 .button {
-  background-color: #04AA6D; /* Green */
+  background-color: #d66af7; /* Green */
   border: none;
+  border-radius: 8px;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  transition-duration: 0.4s;
 }
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
+.button:hover {
+  background-color: rgb(144, 73, 165);
+  color: white;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
