--- a/instrument-experimental/index.css
+++ b/instrument-experimental/index.css
@@ -9,6 +9,15 @@ html {
   font-family: sans-serif;
 }
 
+select {
+  font-size: larger;
+  font-family: sans-serif;
+  background-color: #707070;
+  border-radius: 8px;
+  text-align: center;
+  color: #F0F0F0;
+}
+
 .label {
   font-size: large;
   font-family: sans-serif;
@@ -46,9 +55,12 @@ html {
   height: 25px; /* Specified height */
   background: #707070; /* Grey background */
   outline: none; /* Remove outline */
-  opacity: 1; /* Set transparency (for mouse-over effects on hover) */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
+}
+.slider:hover {
+  opacity: 1;
 }
 
 .slider::-webkit-slider-thumb {
@@ -79,7 +91,7 @@ html {
   background-color: #d66af7;
   border: none;
   border-radius: 8px;
-  color: white;
+  color: #F0F0F0;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
