--- a/instrument-experimental/index.css
+++ b/instrument-experimental/index.css
@@ -9,6 +9,13 @@ html {
   font-family: sans-serif;
 }
 
+.credits {
+  margin: auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: #1d1c1c;
+}
 .instructions {
   padding-left: 20px;
   font-family: sans-serif;
@@ -42,7 +49,7 @@ select {
   width: 50%;
 }
 .left-control {
-  padding-left: 70px;
+  padding-left: 80px;
   float: left;
   margin-left : 0;
   margin-right: auto;
@@ -60,6 +67,11 @@ select {
 .controls-button {
   margin: auto;
   width: 20%;
+}
+
+.randomize {
+  margin: auto;
+  padding-left: 100px;
 }
 
 .slider {
